fix(style): update blue on white for readability
made the secondary lines all dark gray to pass WCAG contrast ratio score of 4.5

--- a/app/frontend/src/themes/Blue on White.css
+++ b/app/frontend/src/themes/Blue on White.css
@@ -9,17 +9,17 @@
     --display-background-size: 120%;
 
     /* Display line colours */
-    --display-gurmukhi-color: #0f4aa9;
-    --display-gurmukhi-larivaar-assist-color: #0f97a9;
-    --display-translation-color: #355383;
-    --display-punjabi-color: #5a738e;
-    --display-transliteration-color: #7e8894;
+    --display-gurmukhi-color: #004daa;
+    --display-gurmukhi-larivaar-assist-color: #006bc9;
+    --display-translation-color: #555555;
+    --display-punjabi-color: #555555;
+    --display-transliteration-color: #555555;
     --display-transliteration-larivaar-assist-color: var(--display-gurmukhi-larivaar-assist-color);
 
     /* Display line pause/vishraam colours */
-    --display-vishraam-heavy-color: #a96e0f;
-    --display-vishraam-medium-color: #a90f4a;
-    --display-vishraam-light-color: #6e0fa9;
+    --display-vishraam-heavy-color: #db5f00;
+    --display-vishraam-medium-color: #870865;
+    --display-vishraam-light-color: #005d42;
 
       /**************/
      /* Controller */
